--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
                 <h3>Responsive Portfolio</h3>
                 <p>Description: This project is a responsive personal portfolio website designed to showcase my skills, projects, and professional experience. It features a clean, modern design with sections for an about me, skills, projects, and contact information.
                    <br>Technologies Used: HTML5, CSS3, JavaScript, Responsive Design Techniques, and Git for version control.</p>
-                <a href="https://github.com/yourusername/project1" class="btn" target="_blank">View on GitHub</a>
+                <a href="https://github.com/AnandMankar17/Portfolio" class="btn" target="_blank">View on GitHub</a>
             </div>
             <div class="project">
-                <h3>Project Title 2</h3>
-                <p>This is a brief description of the project. Highlight the main features and technologies used.</p>
-                <a href="https://github.com/yourusername/project2" class="btn" target="_blank">View on GitHub</a>
+                <h3>Currency Converter</h3>
+                <p>Description: This project is a currency converter web application that allows users to convert between 160 different currencies. The application provides a simple and intuitive interface for users to input their conversion queries and receive accurate results.<br>Technologies Used: HTML5, CSS3, JavaScript, and Git for version control.</p>
+                <a href="https://github.com/AnandMankar17/Mini-Projects/blob/main/curr-con%20Ai/README.md" class="btn" target="_blank">View on GitHub</a>
             </div>
             <div class="project">
                 <h3>Project Title 2</h3>
@@ -82,19 +82,13 @@
     </section>
     <section id="contact" class="contact">
         <h2>Contact Me</h2>
-        <p>If you have any questions or want to get in touch, feel free to contact me using the form below or connect with me on social media.</p>
-        <form action="submit_form.php" method="post">
-            <input type="text" name="name" placeholder="Your Name" required>
-            <input type="email" name="email" placeholder="Your Email" required>
-            <textarea name="message" placeholder="Your Message" required></textarea>
-            <button type="submit" class="btn">Send</button>
-        </form>
+        <p>If you have any questions or want to get in touch, feel free to connect with me on social media.</p>
         <div class="social-media">
-            <a href="https://twitter.com/yourusername" target="_blank"><img src="assets/twitter.png" alt="Twitter"></a>
+            <a href="https://x.com/anand_mankar_?t=_U4NO0Gp7d4PHY3qhqRRsQ&s=08" target="_blank"><img src="assets/twitter.png" alt="Twitter"></a>
             <a href="http://www.linkedin.com/in/anand-mankar" target="_blank"><img src="assets/linkedin.png" alt="LinkedIn"></a>
             <a href="https://github.com/AnandMankar17?tab=repositories" target="_blank"><img src="assets/github.png" alt="GitHub"></a>
         </div>
-    </section>
+    </section>    
     <footer>
         <p>&copy; 2024 Anand Mankar. All rights reserved.</p>
     </footer>
