--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <p class="description">Passionate about building interactive and responsive web applications using modern technologies. With a keen eye for detail and a love for clean code, I aim to deliver seamless user experiences.</p>
 
                 <div class="contact">
-                    <button onclick="window.open('path/to/your/cv.pdf')">Download CV</button>
+                    <button onclick="window.open('assets/Anand_MankarF.pdf')">Download CV</button>
                     <button onclick="location.href ='#contact'">Contact</button>
                 </div>
                 <div class="socials">
